[package]
name = "libftd2xx"
version = "0.23.0" # remember to update html_root_url
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"
description = "Rust safe wrapper around the libftd2xx-ffi crate."
keywords = ["ftdi", "usb"]
categories = ["api-bindings", "hardware-support"]
readme = "README.md"
repository = "https://github.com/newAM/libftd2xx-rs/"
documentation = "https://docs.rs/libftd2xx"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
libftd2xx-ffi = "~0.5.0"
paste = "~1.0.0"
log = "~0.4.11"

[dev-dependencies]
version-sync = "~0.9.1"
