[package]
name = "libftd2xx"
version = "0.30.0" # remember to update html_root_url
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"
description = "Rust safe wrapper around the libftd2xx-ffi crate."
keywords = ["ftdi", "usb"]
categories = ["api-bindings", "hardware-support"]
readme = "README.md"
repository = "https://github.com/newAM/libftd2xx-rs/"
documentation = "https://docs.rs/libftd2xx"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[features]
static = ["libftd2xx-ffi/static"]

[dependencies]
libftd2xx-ffi = "~0.8.0"
log = "~0.4.11"
paste = "^1"
static_assertions = "^1.1.0"

[dev-dependencies]
version-sync = "~0.9.2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
