[package]
name = "libftd2xx"
version = "0.32.2"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
description = "Rust safe wrapper around the libftd2xx-ffi crate."
keywords = ["ftdi", "usb"]
categories = ["api-bindings", "hardware-support"]
readme = "README.md"
repository = "https://github.com/ftdi-rs/libftd2xx/"
documentation = "https://docs.rs/libftd2xx"
license = "MIT"

[features]
static = ["libftd2xx-ffi/static"]

[dependencies]
libftd2xx-ffi = "~0.8.5"
log = "~0.4.11"
paste = "^1"
static_assertions = "^1.1.0"
ftdi-mpsse = "^0.1"

[dev-dependencies]
version-sync = "~0.9.2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
